%%{init: { 'theme': 'default', 'themeVariables': { 'fontSize': '18px', 'fontFamily': 'Arial' }}}%%
classDiagram
    %% Utilisateur et Rôles (Spatie Permission)
    class Utilisateur {
        +int id
        +string nom
        +string email
        +string password
    }

    class Role {
        +int id
        +string nom
    }

    class Permission {
        +int id
        +string nom
    }

    %% Entités Métier
    class Entretien {
        +int id
        +date dateEntretien
        +time heureDebut
        +time heureFin
        +int capaciteMax
        +string codePresence
        +string statut
        +updateStatusBasedOnTime()
    }

    class Salle {
        +int id
        +string nom
    }

    class Candidat {
        +int id
        +string cin
        +string photo
        +string nom
        +string prenom
        +float scoreQCM
        +bool isPresent
    }

    class Ticket {
        +int id
        +string codeUnique
        +int numeroOrdre
        +string statut
        +datetime heureArrivee
    }

    class Notification {
        +int id
        +string titre
        +string message
        +datetime dateEnvoi
        +bool estLu
        +envoyer()
    }

    %% Relations
    Utilisateur "0..*" -- "1..*" Role : possède
    Role "1" -- "0..*" Permission : contient
    
    %% Pivot entretien_formateur_salle
    Utilisateur "0..*" -- "0..*" Entretien : anime (Formateur)
    Salle "1" -- "0..*" Entretien : accueille
    
    %% Le Candidat reçoit des notifications
    Candidat "1" -- "0..*" Notification : reçoit

    Entretien "1" -- "0..*" Candidat : est assigné à
    Candidat "1" -- "0..1" Ticket : génère
    Entretien "1" *-- "0..*" Ticket : contient